--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,11 +2,12 @@
 server.port=${PORT:8080}
 
 # Database configuration
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/fdtracker}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+spring.sql.init.mode=never
 
 # JSP configuration
 spring.mvc.view.prefix=/WEB-INF/jsp/
