--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 server.port=${PORT:8080}
 
 # Database configuration
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/fdtracker}
+spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/fdtracker}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
