--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,12 +17,13 @@ spring.mvc.view.suffix=.jsp
 
 # Email configuration
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=sagarmane111@gmail.com
 spring.mail.password=dmjo mavz eeez hzjb
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
 
 # Security
 spring.security.user.name=admin
